added deps and compile plugin